--- a/_layouts/cip.html
+++ b/_layouts/cip.html
@@ -32,6 +32,13 @@
     blockquote p {
       display: inline;
     }
+
+    body {
+      background-image: url('/pcc_2e/assets/images/fist.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
