--- a/_layouts/cip.html
+++ b/_layouts/cip.html
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>Coding is political</title>
 
-  <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/cip.css" | absolute_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/cip.css" | relative_url }}">
   <link rel="stylesheet" href="cip.css">
-  <script type="text/javascript" src="{{ "/assets/js/just-the-docs.js" | absolute_url }}"></script>
+  <script type="text/javascript" src="{{ "/assets/js/just-the-docs.js" | relative_url }}"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
