--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,10 +18,10 @@
     </script>
   {% endif %}
 
-  {% if site.search_enabled != nil %}
-    <script type="text/javascript" src="{{ "/assets/js/vendor/lunr.min.js" | absolute_url }}"></script>
+  {% if site.search_enabled != false %}
+    <script type="text/javascript" src="{{ "/assets/js/vendor/lunr.min.js" |  relative_url }}"></script>
   {% endif %}
-  <script type="text/javascript" src="{{ "/assets/js/just-the-docs.js" | absolute_url }}"></script>
+  <script type="text/javascript" src="{{ "/assets/js/just-the-docs.js" | relative_url }}"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
