--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   {% endif %}
 
   <title>{{ page.title }} - {{ site.title }}</title>
-  <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | relative_url }}">
   {% if site.ga_tracking != nil %}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga_tracking }}"></script>
     <script>
