--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,13 +20,8 @@
     gtag('config', "{{ site.ga_tracking }}");
   </script>
   {% endif %}
-  {% if page.url == "/chapter_12/images/index.html" %}
+  {% if page.url == "/chapter_12/images/" %}
   <style>
-    .grid {
-      display: grid;
-      grid-template-columns: auto auto;
-    }
-
     /* (A) GRID CONTAINER */
     #grid-col {
       display: grid;
