--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{{ 'apple-touch-icon.png`' | relative_url }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ 'favicon-32x32.png`' | relative_url }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ 'favicon-16x16.png`' | relative_url }}">
-  <link rel="manifest" href="{{ 'site.webmanifest`' | relative_url }}">
+  <link rel="manifest" href="{{ 'site.webmanifest' | relative_url }}">
 
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-default.css' | relative_url }}">
 
@@ -28,13 +28,7 @@
     }
     gtag('js', new Date());
 
-    gtag('config', '{{ site.ga_tracking }}' {
-      % unless site.ga_tracking_anonymize_ip == nil %
-    }, {
-      'anonymize_ip': true
-    } {
-      % endunless %
-    });
+    gtag('config', '{{ site.ga_tracking }}' { % unless site.ga_tracking_anonymize_ip == nil % }, { 'anonymize_ip': true } { % endunless % });
   </script>
 
   {% endif %}
