--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,9 @@
     }
     gtag('js', new Date());
 
-    gtag('config', '{{ site.ga_tracking }}' { % unless site.ga_tracking_anonymize_ip == nil % }, { 'anonymize_ip': true } { % endunless % });
+    { % unless site.ga_tracking_anonymize_ip == nil % }
+    gtag('config', '{{ site.ga_tracking }}', { 'anonymize_ip': true } );
+    { % endunless % }
   </script>
 
   {% endif %}
