--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,10 +46,10 @@
 
     /* (B) GRID CELLS */
     div.cell:nth-child(even) {
-      background: {{ purple-300 }};
+      background: #381885;
     }
     div.cell:nth-child(odd) {
-      background: {{ purple-200 }};
+      background: #4e26af;
     }
 
     div.cell {
