--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,11 +10,11 @@
   {% endif %}
   {% endunless %}
 
-  <link rel="shortcut icon" href="{{ './favicon.ico' | relative_url }}" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ './apple-touch-icon.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ './favicon-32x32.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ './favicon-16x16.png' | relative_url }}">
-  <link rel="manifest" href="{{ './site.webmanifest' | relative_url }}">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png' | relative_url }}">
+  <link rel="manifest" href="/assets/site.webmanifest' | relative_url }}">
 
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-default.css' | relative_url }}">
 
@@ -35,49 +35,6 @@
     {% endif %}
   </script>
 
-  {% endif %}
-  {% if page.url == "/chapter_12/images/" %}
-  <style>
-    /* (A) GRID CONTAINER */
-    #grid-col {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      grid-auto-flow: column;
-      align-content: space-evenly;
-      align-items: center;
-      justify-items: center;
-    }
-
-    /* (B) GRID CELLS */
-    div.cell:nth-child(even) {
-      background: #381885;
-    }
-    div.cell:nth-child(odd) {
-      background: #4e26af;
-    }
-
-    div.cell {
-      padding: 10px;
-      align-self: center;
-      text-align: center;
-    }
-
-    .cell > img {
-      height: auto;
-      max-width: 60vw;
-      width: 9vw;
-      padding: 1vw;
-    }
-
-    /* (C) RESPONSIVE - 1 COLUMN ON SMALL SCREENS */
-    @media screen and (max-width: 640px) {
-      #grid-col {
-        grid-template-columns: 100%;
-      }
-    }
-  </style>
-  {% endif %}
   {% if site.search_enabled != false %}
   <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
   {% endif %}
