--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,11 +10,11 @@
   {% endif %}
   {% endunless %}
 
-  <link rel="shortcut icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/images/apple-touch-icon.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/images/favicon-32x32.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ 'assets/images/favicon-16x16.png' | relative_url }}">
-  <link rel="manifest" href="{{ 'assets/site.webmanifest' | relative_url }}" >
+  <link rel="shortcut icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/images/apple-touch-icon.png' | relative_url }}"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/images/favicon-32x32.png' | relative_url }}"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ 'assets/images/favicon-16x16.png' | relative_url }}"/>
+  <link rel="manifest" href="{{ 'assets/site.webmanifest' | relative_url }}"/>
 
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-default.css' | relative_url }}">
 
@@ -34,6 +34,7 @@
     gtag('config', '{{ site.ga_tracking }}');
     {% endif %}
   </script>
+  {% endif %}
 
   {% if site.search_enabled != false %}
   <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
