--- a/_layouts/cip.html
+++ b/_layouts/cip.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/cip.css" | relative_url }}">
 
-  <script type="text/javascript" src="{{ "/assets/js/just-the-docs.js" | relative_url }}"></script>
+  <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | relative_url }}"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
