--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,39 +1,51 @@
  /* (A) GRID CONTAINER */
  #grid-col {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-auto-flow: dense;
-    grid-column-gap: 0.125vw;
-    align-content: center;
-    align-items: center;
-    justify-items: center;
-  }
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+   grid-template-rows: 1fr 1fr 1fr;
+   grid-auto-flow: dense;
+   grid-column-gap: 0.125vw;
+   align-content: center;
+   align-items: center;
+   justify-items: center;
+ }
 
-  /* (B) GRID CELLS */
-  div.cell:nth-child(even) {
-    background: $purple-200;
-  }
-  div.cell:nth-child(odd) {
-    background: $purple-300;
-  }
+ /* (B) GRID CELLS */
+ div.cell:nth-child(even) {
+   background: $purple-200;
+ }
 
-  div.cell {
-    padding: 10px;
-    align-self: center;
-    text-align: center;
-  }
+ div.cell:nth-child(odd) {
+   background: $purple-300;
+ }
 
-  .cell > img {
-    height: auto;
-    max-width: 60vw;
-    width: 9vw;
-    padding: 1vw;
-  }
+ div.cell {
+   padding: 10px;
+   align-self: center;
+   text-align: center;
+ }
 
-  /* (C) RESPONSIVE - 1 COLUMN ON SMALL SCREENS */
-  @media screen and (max-width: 640px) {
-    #grid-col {
-      grid-template-columns: 100%;
-    }
-  }
+ .cell>img {
+   height: auto;
+   max-width: 60vw;
+   width: 9vw;
+   padding: 1vw;
+ }
+
+ /* (C) RESPONSIVE - 1 COLUMN ON SMALL SCREENS */
+ @media screen and (max-width: 640px) {
+   #grid-col {
+     grid-template-columns: 100%;
+   }
+ }
+
+ img.email {
+   display: inline;
+   position: sticky;
+   max-height: 3rem;
+   margin-bottom: calc(-1rem - 0.5vh);
+   max-width: 17rem;
+   object-fit: cover;
+   overflow: hidden;
+   object-position: center;
+ }
