--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -47,8 +47,9 @@
  img.email {
    display: inline;
    filter:  invert(7%) sepia(100%) saturate(7258%) hue-rotate(247deg) brightness(106%) contrast(143%); // #0000ff
+   height: $root-font-size;
    font-size: $root-font-size;
-   max-height: $content-line-height;
+   max-height: $content-line-height + 'rem';
    line-height: $content-line-height;
 
 
