color email links

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -46,7 +46,7 @@
 
  img.email {
    display: inline;
-   filter:  invert(7%) sepia(100%) saturate(7258%) hue-rotate(247deg) brightness(106%) contrast(143%); // #0000ff
+   filter:  invert(38%) sepia(96%) saturate(1649%) hue-rotate(199deg) brightness(99%) contrast(97%); // #2c84fa
    height: $root-font-size;
    font-size: $root-font-size;
    max-height: #{$content-line-height}rem;
