--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -130,12 +130,14 @@
   .site-logo {
     width: 100%;
     height: 100%;
-    background-image: url($logo);
+    /* background-image: url($logo);
     background-repeat: no-repeat;
     background-position: left center;
-    background-size: contain;
+    background-size: contain; */
   }
 }
+
+
 
 .site-button {
   display: flex;
