--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -51,6 +51,78 @@
    font-size: $root-font-size;
    max-height: #{$content-line-height}rem;
    line-height: $content-line-height;
-
-
  }
+
+ /*** Default shared CSS ****/
+figure.figurefx {
+  margin: 4vh auto;
+	padding: 0;
+	display: block;
+	position: relative;
+	overflow: hidden; /* hide overflowing elements by default */
+}
+
+figure.figurefx figcaption {
+	position: absolute;
+	display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+	text-align: center;
+	background: white;
+	padding: 15px;
+	z-index: 100;
+	width: 100%;
+	max-height: 100%;
+	overflow: hidden;
+	top: 50%;
+	left: 0;
+	-moz-transform: translate3d(-100%, -50%, 0); /* position caption outside layout horizontally and centered vertically */
+	-webkit-transform: translate3d(-100%, -50%, 0);
+	transform: translate3d(-100%, -50%, 0);
+	opacity: 0;
+	-moz-transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
+}
+
+figure.figurefx figcaption a {
+	text-decoration: none;
+}
+
+/*** Push Up effect ****/
+figure.pushup img {
+	-moz-transform: translate3d(0, 0, 0);
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+	-moz-transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
+}
+
+figure.pushup figcaption {
+	top: 100%;
+	opacity: 1;
+	-moz-transform: translate3d(0, 0, 0);
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
+
+
+figure.pushup:hover img {
+	-moz-transform: translate3d(0, -20px, 0); /* move image up vertically a bit for parallax effect */
+	-webkit-transform: translate3d(0, -20px, 0);
+	transform: translate3d(0, -20px, 0);
+  opacity: .5;
+ 
+}
+
+figure.pushup:hover figcaption{
+	-moz-transform: translate3d(0, -100%, 0); /* move caption up vertically to fully reveal caption */
+	-webkit-transform: translate3d(0, -100%, 0);
+	transform: translate3d(0, -100%, 0);
+	-moz-transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
+  box-shadow: 0px -2px 28px rgba(0, 0, 0, 0.3);
+}
