--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -69,7 +69,7 @@ figure.figurefx figcaption {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 	text-align: center;
-	background: white;
+	background: invert($body-background-color);
 	padding: 15px;
 	z-index: 100;
 	width: 100%;
