--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -128,3 +128,8 @@ figure.pushup:hover figcaption{
 	transition: all 0.5s;
   box-shadow: 0px -2px 28px rgba(0, 0, 0, 0.3);
 }
+
+a.zip-dl {
+	float: left;
+    margin: 4vw 4vw 4vw 1vw;
+}
