--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,13 @@
 ---
 layout: default
 ---
-
+{% if page.hero %}
+	<img src="{{page.hero}} alt="" title=""/>
+{% endif %}
+{% if page.title%}
+	<h1>{{page.title}}</h1>
+{% else %}
+	<h1>Untitled post</h1>
+{% endif %}
+{{ page.date | date: "%b %d, %Y" }}
 {{ content }}
