References to URLs should not be protocol-relative

--- a/_layouts/cip.html
+++ b/_layouts/cip.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta content="IE=Edge">
   <title>Coding is political</title>
 
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | relative_url }}">
