--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@ layout: table_wrappers
       {% endif %}
     </nav>
     <footer class="site-footer">
-      This site is forked from <a href="//ehmatthes.github.io/pcc_2e">the author's original site</a>, a GitHub repository.
+      This site is forked from <a href="https://ehmatthes.github.io/pcc_2e">the author's original site</a>, a GitHub repository.
     </footer>
   </div>
   <div class="main" id="top">
