--- a/_includes/title.html
+++ b/_includes/title.html
@@ -3,9 +3,9 @@
     <img sizes="(max-width: 1380px) 100vw, 1380px"
 srcset="{{ '/assets/images/pcc_logo_csyivv_c_scale,w_50.png' | relative_url }} 50w,
 {{ '/assets/images/pcc_logo_csyivv_c_scale,w_508.png' | relative_url }} 508w,
-{{ '/assets/images/pcc_logo_csyivv_c_scale,w_788.png' | relative_url }} 788w,
-{{ '/assets/images/pcc_logo_csyivv_c_scale,w_1380.png' | relative_url }} 1380w"
-src="{{ '/assets/images/pcc_logo_csyivv_c_scale,w_1380.png' | relative_url }}"
+{{ '/assets/images/pcc_logo_csyivv_c_scale,w_788.webp' | relative_url }} 788w,
+{{ '/assets/images/pcc_logo_csyivv_c_scale,w_1380.webp' | relative_url }} 1380w"
+src="{{ '/assets/images/pcc_logo_csyivv_c_scale,w_1380.webp' | relative_url }}"
 alt="Python Crash Course 2nd Edition"></div>
 {% else %}
   {{ site.title }}
