--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -132,6 +132,12 @@ figure.pushup:hover figcaption{
 .giphy-embed{
 	max-width: fit-content;
 }
+.book-cover{
+  -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+  margin-bottom: 10vw;
+  margin-left: 1vh;
+  float: right;
+}
 a.zip-dl {
 	float: left;
     margin: 2vw 4vw 4vw 1vw;
