--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -51,7 +51,7 @@
    font-size: $root-font-size;
    max-height: #{$content-line-height}rem;
    line-height: $content-line-height;
-   margin-bottom: calc(-0.2*#{$root-font-size});
+   margin-bottom: -0.2*#{$root-font-size};
  }
 
  /*** Default shared CSS ****/
@@ -132,12 +132,36 @@ figure.pushup:hover figcaption{
 .giphy-embed{
 	max-width: fit-content;
 }
+$bc-margin-bottom: 10vw;
+$bc-margin-left: 1vh;
 .book-cover{
-  -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
-  margin-bottom: 10vw;
-  margin-left: 1vh;
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(white));
+  margin-bottom: $bc-margin-bottom;
+  margin-left: $bc-margin-left;
   float: right;
+  position: relative;
 }
+
+.book-cover img {
+  border: 10px solid #444;
+  border-radius: 1px;
+  box-shadow: 15px 0 20px -20px #444444, -15px 0 20px -20px #444444;
+  z-index: -1;
+}
+
+.book-cover:before {
+  background: -moz-linear-gradient(center top, #FFFFFF, #FFFFFF 30%, rgba(255, 255, 255, 0.9) 65%, rgba(255, 255, 255, 0.7)) repeat scroll 0 0 padding-box, -moz-element(".book-cover") no-repeat scroll 0 -$bc-margin-bottom content-box rgba(0, 0, 0, 0);
+  content: "";
+  height: 1.1*$bc-margin-bottom;
+  left: 0;
+  padding: 1px 0;
+  position: absolute;
+  top: 2.225*$bc-margin-bottom;
+  -webkit-transform: scaleY(-1);
+  transform: scaleY(-1);
+  width: 3*$bc-margin-left;
+}
+
 a.zip-dl {
 	float: left;
     margin: 2vw 4vw 4vw 1vw;
