--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -132,6 +132,35 @@ figure.pushup:hover figcaption{
 .giphy-embed{
 	max-width: fit-content;
 }
+table.prev-next {
+  width: 100%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: $body-text-color;
+  background: $body-background-color;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+table.prev-next thead {
+  display: none;
+}
+table.prev-next tr:nth-child(1) {
+  text-align: left;
+}
+table.prev-next td:nth-child(1) a::before {
+  content: "⬅️ ";
+}
+table.prev-next td:nth-child(2) {
+  text-align: right;
+}
+table.prev-next td:nth-child(2) a::after {
+  content: " ➡️";
+}
+
 $bc-margin-bottom: 10vw;
 $bc-margin-left: 1vh;
 .book-cover{
