--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,140 +1,159 @@
-#search-input{
+#surveycontainer {
+  display: flex;
+  width: 100%;
+  min-height: 5500px;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+#survey {
+  flex-grow: 1;
+}
+
+#search-input {
   color: $body-text-color;
 }
+
 /* grid container */
- #grid-col {
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-   grid-auto-flow: dense;
-   grid-column-gap: 0.125vw;
-   align-content: center;
-   align-items: center;
-   justify-items: center;
- }
+#grid-col {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-flow: dense;
+  grid-column-gap: 0.125vw;
+  align-content: center;
+  align-items: center;
+  justify-items: center;
+}
 
- /* grid cells */
- div.cell:nth-child(even) {
-   background: $purple-200;
- }
+/* grid cells */
+div.cell:nth-child(even) {
+  background: $purple-200;
+}
 
- div.cell:nth-child(odd) {
-   background: $purple-300;
- }
+div.cell:nth-child(odd) {
+  background: $purple-300;
+}
 
- div.cell {
-   padding: 10px;
-   align-self: center;
-   text-align: center;
- }
+div.cell {
+  padding: 10px;
+  align-self: center;
+  text-align: center;
+}
 
- .cell>img {
-   height: auto;
-   max-width: 60vw;
-   width: 9vw;
-   padding: 1vw;
- }
+.cell>img {
+  height: auto;
+  max-width: 60vw;
+  width: 9vw;
+  padding: 1vw;
+}
 
- /* responsive - 1 column on small screens */
- @media screen and (max-width: 640px) {
-   #grid-col {
-     grid-template-columns: 100%;
-   }
+/* responsive - 1 column on small screens */
+@media screen and (max-width: 640px) {
+  #grid-col {
+    grid-template-columns: 100%;
+  }
 
-   .cell>img {
-     max-width: 100vw;
-     width: 64vw;
-   }
+  .cell>img {
+    max-width: 100vw;
+    width: 64vw;
+  }
 
- }
+}
 
- img.email {
-   display: inline;
-   filter:  invert(38%) sepia(96%) saturate(1649%) hue-rotate(199deg) brightness(99%) contrast(97%); // #2c84fa
-   height: $root-font-size;
-   font-size: $root-font-size;
-   max-height: #{$content-line-height}rem;
-   line-height: $content-line-height;
-   margin-bottom: -0.2*#{$root-font-size};
- }
+img.email {
+  display: inline;
+  filter: invert(38%) sepia(96%) saturate(1649%) hue-rotate(199deg) brightness(99%) contrast(97%); // #2c84fa
+  height: $root-font-size;
+  font-size: $root-font-size;
+  max-height: #{$content-line-height}rem;
+  line-height: $content-line-height;
+  margin-bottom: -0.2*#{$root-font-size};
+}
 
- /*** Default shared CSS ****/
+/*** Default shared CSS ****/
 figure.figurefx {
   margin: 4vh auto;
-	padding: 0;
-	display: block;
-	position: relative;
-	overflow: hidden; /* hide overflowing elements by default */
-    text-align: center;
+  padding: 0;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  /* hide overflowing elements by default */
+  text-align: center;
 }
 
 figure.figurefx figcaption {
-	position: absolute;
-	display: block;
+  position: absolute;
+  display: block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-	text-align: center;
-	color: $body-text-color; //text should contrast with background
-	background: lighten($body-background-color,10%);
-	padding: 15px;
-	z-index: 100;
-	width: 100%;
-	max-height: 100%;
-	overflow: hidden;
-	top: 50%;
-	left: 0;
-	-moz-transform: translate3d(-100%, -50%, 0); /* position caption outside layout horizontally and centered vertically */
-	-webkit-transform: translate3d(-100%, -50%, 0);
-	transform: translate3d(-100%, -50%, 0);
-	opacity: 0;
-	-moz-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
+  text-align: center;
+  color: $body-text-color; //text should contrast with background
+  background: lighten($body-background-color, 10%);
+  padding: 15px;
+  z-index: 100;
+  width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  top: 50%;
+  left: 0;
+  -moz-transform: translate3d(-100%, -50%, 0);
+  /* position caption outside layout horizontally and centered vertically */
+  -webkit-transform: translate3d(-100%, -50%, 0);
+  transform: translate3d(-100%, -50%, 0);
+  opacity: 0;
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 figure.figurefx figcaption a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 /*** Push Up effect ****/
 figure.pushup img {
-	-moz-transform: translate3d(0, 0, 0);
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-	-moz-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
+  -moz-transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 figure.pushup figcaption {
-	top: 100%;
-	opacity: 1;
-	-moz-transform: translate3d(0, 0, 0);
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
+  top: 100%;
+  opacity: 1;
+  -moz-transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 
 figure.pushup:hover img {
-	-moz-transform: translate3d(0, -20px, 0); /* move image up vertically a bit for parallax effect */
-	-webkit-transform: translate3d(0, -20px, 0);
-	transform: translate3d(0, -20px, 0);
+  -moz-transform: translate3d(0, -20px, 0);
+  /* move image up vertically a bit for parallax effect */
+  -webkit-transform: translate3d(0, -20px, 0);
+  transform: translate3d(0, -20px, 0);
   opacity: .5;
- 
+
 }
 
-figure.pushup:hover figcaption{
-	-moz-transform: translate3d(0, -100%, 0); /* move caption up vertically to fully reveal caption */
-	-webkit-transform: translate3d(0, -100%, 0);
-	transform: translate3d(0, -100%, 0);
-	-moz-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
+figure.pushup:hover figcaption {
+  -moz-transform: translate3d(0, -100%, 0);
+  /* move caption up vertically to fully reveal caption */
+  -webkit-transform: translate3d(0, -100%, 0);
+  transform: translate3d(0, -100%, 0);
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   box-shadow: 0px -2px 28px rgba(0, 0, 0, 0.3);
 }
-.giphy-embed{
-	max-width: fit-content;
+
+.giphy-embed {
+  max-width: fit-content;
 }
+
 table.prev-next {
   width: 100%;
   margin: 0 auto;
@@ -148,29 +167,36 @@ table.prev-next {
   border-radius: 0.5rem;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
+
 table.prev-next thead {
   display: none;
 }
-table.prev-next td{
+
+table.prev-next td {
   width: 50%;
   max-width: 50%;
 }
+
 table.prev-next td:nth-child(1) {
   text-align: left;
 }
+
 table.prev-next td:nth-child(1) a::before {
   content: "⬅️ ";
 }
+
 table.prev-next td:nth-child(2) {
   text-align: right;
 }
+
 table.prev-next td:nth-child(2) a::after {
   content: " ➡️";
 }
 
 $bc-margin-bottom: 10vw;
 $bc-margin-left: 1vh;
-.book-cover{
+
+.book-cover {
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(white));
   margin-bottom: $bc-margin-bottom;
   margin-left: $bc-margin-left;
@@ -199,52 +225,61 @@ $bc-margin-left: 1vh;
 }
 
 a.zip-dl {
-	float: left;
-    margin: 2vw 4vw 4vw 1vw;
+  float: left;
+  margin: 2vw 4vw 4vw 1vw;
 }
+
 .f_right {
-	float: right;
+  float: right;
 }
-h1, h2, h3, h4, h5, h6 {
-	clear:both;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  clear: both;
 }
 
 details {
-    border: 1px solid $grey-lt-300;
-    border-radius: 4px;
-    padding: .5em .5em 0;
+  border: 1px solid $grey-lt-300;
+  border-radius: 4px;
+  padding: .5em .5em 0;
 }
 
 summary {
-    font-weight: bold;
-    margin: -.5em -.5em 0;
-    padding: .5em;
+  font-weight: bold;
+  margin: -.5em -.5em 0;
+  padding: .5em;
 }
 
 details[open] {
-    padding: .5em;
+  padding: .5em;
 }
 
 details[open] summary {
-    border-bottom: 1px solid $grey-lt-300;
-    margin-bottom: .5em;
+  border-bottom: 1px solid $grey-lt-300;
+  margin-bottom: .5em;
 }
 
-#🐦{
-	fill: white;
-    border-radius: 100%;
-    border: outset 3px white;
-    border-style: solid;
-    display: inline-flex;
-    background-color: black;
-    transition-duration: 0.2s;
-    transition-property: background-color, box-shadow;
+#🐦 {
+  fill: white;
+  border-radius: 100%;
+  border: outset 3px white;
+  border-style: solid;
+  display: inline-flex;
+  background-color: black;
+  transition-duration: 0.2s;
+  transition-property: background-color, box-shadow;
 }
+
 #🐦 img {
-	border-radius: 100%;
+  border-radius: 100%;
 }
 
-#tiy_svg{
-	filter: drop-shadow(0px 1px 1px gold);
+#tiy_svg {
+  filter: drop-shadow(0px 1px 1px gold);
 }
+
 @import "../../assets/css/afterward.scss";
